# pygubu-uv

./: README.md  pyproject.toml
src/pygubu_uv/: __main__.py  pygubu-uv.ui  pygubuexampleui.py
