[project]
name = "pygubu-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carsten Engelke", email = "carsten.engelke@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pygubu>=0.38.2",
]

[project.scripts]
pygubu-uv = "pygubu_uv.__main__:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
